@@ -119,7 +119,7 @@ BEGIN
     COMBOBOX        IDC_URLCOMBO,13,28,255,64,CBS_DROPDOWN | CBS_AUTOHSCROLL | 
                     WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "...",IDC_BROWSE,273,28,14,14
-    LTEXT           "&Checkout directory:",IDC_STATIC,13,42,80,8
+    LTEXT           "&Checkout directory:",IDC_EXPORT_CHECKOUTDIR,13,42,80,8
     EDITTEXT        IDC_CHECKOUTDIRECTORY,13,52,255,14,ES_AUTOHSCROLL
     PUSHBUTTON      "...",IDC_CHECKOUTDIRECTORY_BROWSE,273,52,14,14
     GROUPBOX        "Revision",IDC_STATIC,7,78,286,48
@@ -935,6 +935,7 @@ END
 STRINGTABLE 
 BEGIN
     IDS_CHECKOUT_TT_DIR     "Location where the contents of the\nrepository URL will be saved to."
+    IDS_CHECKOUT_EXPORTDIR  "Export Directory:"
 END
 
 STRINGTABLE 
