@@ -1,10 +1,10 @@
-#define FILEVER_INCVERSION        0,21,0,315
-#define PRODUCTVER_INCVERSION     0,21,0,315
-#define STRFILEVER_INCVERSION     "0, 21, 0, 315\0"
-#define STRPRODUCTVER_INCVERSION  "0, 21, 0, 315\0"
+#define FILEVER_INCVERSION        0,21,0,316
+#define PRODUCTVER_INCVERSION     0,21,0,316
+#define STRFILEVER_INCVERSION     "0, 21, 0, 316\0"
+#define STRPRODUCTVER_INCVERSION  "0, 21, 0, 316\0"
 
 #define TSVN_VERMAJOR             0
 #define TSVN_VERMINOR             21
 #define TSVN_VERMICRO             0
-#define TSVN_VERBUILD_INCVERSION  315
+#define TSVN_VERBUILD_INCVERSION  316
 
